--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 					<div class="header__block">
 						<div class="header__logo">
 							<a href="#" class="logo">
-								<span>C</span>
-								ode
-								<span>V</span>
-								erge
+								<span>C</span>ode
+								<span>V</span>erge
 							</a>
 						</div>
 						<div class="header__menu menu">
